<resources>
    <string name="app_name">ProyectoFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="register">Registrate</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="email">Correo Electronico</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="volver">Volver</string>
    <string name="productos">Productos</string>
    <string name="add_product">AÑADIR PRODUCTO</string>
    <string name="delete_coop">Eliminar Cooperativa</string>
    <string name="choose_date">Elegir Fecha</string>
    <string name="total">Total</string>
    <string name="no_data">Sin datos</string>
    <string name="choose_day">Elige un dia</string>
    <string name="add_data">Añadir Datos</string>
    <string name="delete">Borrar</string>
    <string name="product">Producto</string>
    <string name="add_register">AÑADIR REGISTRO</string>
    <string name="kilos">Kilos</string>
    <string name="create_coop">CREAR COOPERATIVA</string>
    <string name="coop_name">Nombre de la Cooperativa</string>
    <string name="desc">Descripcion</string>
    <string name="welcome">Bienvenido!</string>
    <string name="coop_list">Lista de Cooperativas</string>
    <string name="update_desc">Modificar Descripción</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="add_desc">Añade tu descripción</string>
</resources>