<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEDED"
    tools:context=".activities.DataCoopsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtNombreC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/fuente"
                android:gravity="center|top"
                android:text="COSAFRA"
                android:textColor="#9e9e9e"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    app:cardCornerRadius="50dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="#F8F9F9"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtHoy"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:fontFamily="@font/fuente"
                                android:text="@string/choose_date"
                                android:textColor="@color/black"
                                android:textSize="40sp" />

                            <TextView
                                android:id="@+id/txtKilosHoy"
                                android:layout_width="match_parent"
                                android:layout_height="69dp"
                                android:background="#D8310C"
                                android:fontFamily="@font/fuente"
                                android:text="@string/choose_date"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="40sp" />

                        </LinearLayout>
                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    app:cardCornerRadius="50dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#F8F9F9"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtMaxSocio"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:fontFamily="@font/fuente"
                                android:text="@string/total"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="40sp" />

                            <TextView
                                android:id="@+id/txtTotal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#D8310C"
                                android:fontFamily="@font/fuente"
                                android:text="@string/no_data"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="40sp" />

                        </LinearLayout>
                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btnCaledario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/image_rounded"
                android:text="@string/choose_day"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnAñadirRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/image_rounded"
                android:text="@string/add_data"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_atras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/volver"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/btn_borrarP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="180dp"
                    android:text="@string/delete"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>